--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
 <div class="abstract">
     <h2>Abstract</h2>
     <p style="text-align:left;">
-        I am an entrepreneur, a network security, fintech, distributed systems student. Love Capital Markets and working on global disruption for the greater good. Level the playing field for all, not just for the blue eyed ones.
-        I enjoy what I do, love new challenges and always open to a new one. I also thrive in chaos. Love AI, learnt quite a bit and learning more as we speak.
+        I am an entrepreneur, a network security, fintech, distributed systems student. Love Capital Markets and working on global disruption for the greater good. Level the playing field for all, not just for the blue eyed ones. 
+        I enjoy what I do, love new challenges and always open to a new one. I also thrive in chaos. 
+        Love AI, learnt quite a bit and learning more as we speak.
 
-    <p style="text-align:left;">Love working with people, we don't have to work for the same company, we can colloborate. Ping me, bring your skills and opportunities and we can explore building something bigger and better for all!</p>
+    <p style="text-align:left;">Love working with people, we don't have to work for the same company, we can collaborate. 
+        Ping me, bring your skills and opportunities and we can explore building something bigger and better for all!</p>
 </div>
 
 
