--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <div class="abstract">
     <h2>Abstract</h2>
     <p style="text-align:left;">
-        I am an entrepreneur, a network security, fintech, distributed systems student. Love Capital Markets and working on global disruption for the greater good. Level the playing field for all, not just for the blue eyed ones. 
+        I am an entrepreneur, a network security, fintech, distributed systems disciple. Love Capital Markets and working on global disruption for the greater good. 
+        Level the playing field for all, not just for the blue eyed ones. 
         I enjoy what I do, love new challenges and always open to a new one. I also thrive in chaos. 
         Love AI, learnt quite a bit and learning more as we speak.
 
