--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Xin Wan</title>
+    <title>Sukanta Ganguly</title>
     <meta name="description" content="SG, Ph.D."/>
     <meta name="keywords" content="blockchain, fintech, capital markets, think, execution"/>
     <link rel="stylesheet" href="https://latex.now.sh/style.css">
