--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <ul>
             <li>
-                Entrepreneur at large  <a href="https://www.linkedin.com/in/sukantag/"> Linkedin </a> <br>
+                <a href="https://www.linkedin.com/in/sukantag/"> Entrepreneur at large </a> <br>
             </li>
         </ul>
 
