--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <h2 id="education">Academics</h2>
         <ul>
             <li>
-                Doctorate in Engineer <br>
+                Doctorate in Engineering <br>
                 Texas Tech University, TX
             </li>
             <li>
